[build-system]
requires = ["setuptools >= 69.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rtpytools"
version = "0.0.1"
description = "This Python project is a collection of tools to handle and manipulate radiotherapy-related data."
authors = [
    { name = "Tom Vercauteren", email = "tomvercaut@gmail.com" }
]
license = { file = "LICENSE" }
readme = { file = "README.md" }
classifiers = [
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.12"
dependencies = [
    "pydicom>=2.4.4",
    "setuptools>=69.0.0",
    "pyinstaller>=6.3.0",
    "pandas>=2.1.4",
    "numpy>=1.26.3",
    "matplotlib>=3.8.2",
]

[project.scripts]
ls_plan = "ls_rtplan:ls_rtplan"
dcmcp = "dcmcp:dcmcp"

[project.urls]
Repository = "https://github.com/tomvercaut/rtpytools.git"
